# semantic-release-github

./: .pre-commit-config.yaml  CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  setup.cfg
.github/workflows/: python-push.yml  python-test.yml
dummy/: __init__.py  cli.py  dummy_submodule.py
scripts/: utility.py
tests/dummy/: dummy_submodule_test.py
