[metadata]
name = dummy
version = attr: dummy.__version__
description = A dummy project to allow simplified testing of semantic-release.
author = Chris Butler
author_email = chris@thebutlers.me
license = Apache Software License v2
url = https://github.com/IBM/compliance-trestle
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: Microsoft
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =


[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    dummy = dummy.cli:run

[options.extras_require]
dev =
    attrs~=19.3
    pytest>=5.4.3
    pytest-cov>=2.10.0
    pre-commit>=2.4.0
    setuptools
    wheel
    pip
    yapf
    python-semantic-release
    flake8
    flake8-2020
    flake8-broken-line
    flake8-bugbear
    flake8-builtins
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-eradicate
    flake8-import-order
    flake8-mutable
    flake8-pep3101
    flake8-print
    flake8-quotes
    flake8-string-format
    flake8-use-fstring
    pep8-naming
    dictdiffer
    mdformat
    python-dateutil
    mypy

    
[semantic_release]
version_variable=dummy/__init__.py:__version__
branch = master
upload_to_pypi = false
version_source = commit

[flake8]
# WARNING: This should be kept compatible with .pre-commit-config.yaml
ignore = P1,C812,C813,C814,C815,C816
max-line-length=120
exclude = trestle/oscal

[mypy]
follow_imports = normal
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
show_error_codes = True
show_error_context = True
allow_valid_type = True
#disallow_untyped_defs = True
 
